# viten-api

./: .env  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
app/: main.py
app/api/v1/: analyze.py
app/core/: config.py
app/schemas/: claim.py
app/services/: llm_extractor.py
docs/: AI_NEUTRALITY.md  ARCHITECTURE.md  CODING_STANDARDS.md
