[project]
name = "viten-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "instructor>=1.14.5",
    "openai>=2.28.0",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.41.0",
]
